--- a/new-scroll/docs/style.css
+++ b/new-scroll/docs/style.css
@@ -77,7 +77,7 @@ nav {
     rgba(0, 0, 0, 0.9)
   ),url('media/network_grab.png');
   height: 18rem;
-  padding-top: 3.5rem;
+  padding-top: 0.3rem;
 }
 
 .introbox{
@@ -89,7 +89,7 @@ nav {
 .intro__hed {
   font-size: 2em;
   color: white;
-  margin: 2rem auto 0.5rem auto;
+  /* margin: 0rem auto 0.5rem auto; */
 }
 
 .intro__dek {
