--- a/new-scroll/docs/style.css
+++ b/new-scroll/docs/style.css
@@ -11,7 +11,7 @@ body {
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  min-height: 1280px;
+  /* min-height: 1280px; */
   color: #3b3b3b;
   font-size: 24px;
 }
@@ -132,7 +132,7 @@ nav {
 }
 
 #outro {
-  height: 640px;
+  height: 40px;
 }
 
 @media (min-width: 840px) {
